--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # this means to ignore newlines until "baseurl:"
  I have experience using Excel, Python, SQL, and PowerShell.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-permalink: /:slugified_categories/:title:output_ext
+permalink: /:categories/:title:output_ext
 # twitter_username: jekyllrb
 github_username:  edwardspurlock
 
