--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:categories/:title:output_ext
+excerpt_separator: <!--more-->
 # twitter_username: jekyllrb
 github_username:  edwardspurlock
 
